--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,35 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.5'
 	id 'io.spring.dependency-management' version '1.1.3'
+	id 'com.diffplug.spotless' version'6.11.0'
 }
+// Spotless 설정
+spotless {
+	java {
+		target("**/*.java")
+		removeUnusedImports()
+		trimTrailingWhitespace()
+		indentWithTabs()
+		endWithNewline()
+		googleJavaFormat().aosp()
+		importOrder 'java', 'javax', 'org', 'com', 'com.diffplug', ''
+	}
+}
+//GitHooks를 이용한 pre-commit 단계에서 spotlessApply자동 적용
+tasks.register('updateGitHooksCommit', Copy) {
+	from './scripts/pre-commit'
+	into './.git/hooks'
+	fileMode 0775
+}
+compileJava.dependsOn updateGitHooksCommit
+
+tasks.register('updateGitHooksPush', Copy) {
+	from './scripts/pre-push'
+	into './.git/hooks'
+	fileMode 0775
+}
+compileJava.dependsOn updateGitHooksPush
+
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
